--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,24 @@
 <%- include('partials/header') -%>
-<h1>login</h1>
-<%- include('partials/footer') -%>
+    <h1>login</h1>
+    <form>
+        <label name="email" class="email">email</label>
+        <input type="text" name="email" required />
+
+        <label name="password" class="password">password</label>
+        <input type="password" name="password" required />
+
+        <button>submit</button>
+    </form>
+
+    <script>
+
+        const form = document.querySelector('form')
+        form.addEventListener("submit", (e) => {
+            e.preventDefault();
+            const email = form.email.value
+            const pass = form.password.value
+
+            console.log('submitted user', email, pass)
+        })
+    </script>
+    <%- include('partials/footer') -%>
