--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,30 @@
 <%- include('partials/header') -%>
-<h1>signup</h1>
-<%- include('partials/footer') -%>
+    <h1>signup</h1>
+    <form>
+        <label name="email" class="email">email</label>
+        <input type="text" name="email" required />
+
+        <label name="password" class="password">password</label>
+        <input type="password" name="password" required />
+
+        <button>submit</button>
+    </form>
+
+    <script>
+
+        const form = document.querySelector('form')
+            form.addEventListener("submit", async (e) => {
+                e.preventDefault();
+                const email = form.email.value
+                const pass = form.password.value
+                try {
+                    const res = await fetch('/signup', {
+                        method: 'POST', body: JSON.stringify({ email: email, password: pass })
+                        , headers: { 'content-type': 'application/json' }
+                    })
+                } catch (err) {
+                    console.log(err)
+                  }
+        })
+    </script>
+    <%- include('partials/footer') -%>
